Fix header link for dark mode

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -265,4 +265,10 @@ div.highlight pre, table.highlighttable pre {
         color: #f47067 !important;
         font-weight: bold;
     }
+
+    a.headerlink:hover {
+        color: #adbac7 !important;
+        background: transparent !important;
+        text-decoration: none !important;
+    }
 }
